Fixing issue with mobile only horizontal scroll.

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -29,7 +29,8 @@
         }
     }
 
-    main, footer {
+    main,
+    footer {
         width: 100%;
         left: 0;
     }
