--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -14,6 +14,7 @@ PROJECTS
             opacity: 1;
             transform: translateX(0);
             transition: opacity 0.3s, transform 0.3s;
+            width: 100%;
         }
     }
 }
@@ -33,6 +34,8 @@ PROJECTS
     padding: 5%;
     transform: translateX(100%); 
     // when not translated it was causing automatic link clicks on mobile/touch devices.
+    width: 0; 
+    // mobile only it was causing the dreaded horizontal scroll.
     border-radius: 10px;
     background-color: rgba($background-color-main, 0.8);
     z-index: 50;
